packages/concerto-cto/test/cto/bad/map.bad.identifiers.cto
amespace com.acme@1.0.0

map Library {
  o String x
  o String y
}

concept Concept {
  o Library library
}
